--- a/HtmlNour_2/index.html
+++ b/HtmlNour_2/index.html
@@ -4,7 +4,7 @@
 	<link rel=stylesheet href=style_dark.css>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HTML5 | CSS | RESPONSIVE</title>
+	<title>Music Tutoriel Whit Reifu</title>
 </head>
 
 <!-- //////////////////////////////////////////////////////// -->
